# MyWallet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  package.json  pnpm-lock.yaml  svelte.config.js
embedded/: Background fill.jpg.hpp  Emma (Edited).jpg.hpp  EnamPic (Edited).jpg.hpp  Joseph.jpg.hpp  all.hpp  fallback.html.hpp  favicon.svg.hpp  icon.png.hpp  logo.png.hpp  person.jpg.hpp  robots.txt.hpp
embedded/_app/: env.js.hpp  version.json.hpp
embedded/_app/immutable/: bundle.B3yLyr-X.js.hpp  bundle.COxQOLhS.js.hpp  bundle.C_KHouht.js.hpp  bundle.CaR_M4oW.js.hpp  bundle.D7fqL8fh.js.hpp  bundle.DG2CIYpr.js.hpp  bundle.DI9sSIGy.js.hpp  bundle.DmfAOLOC.js.hpp
embedded/_app/immutable/assets/: Background.BWOyHzU8.jpg.hpp  Emma (Edited).CSs6PZU-.jpg.hpp  Emma.CSs6PZU-.jpg.hpp  Enam.Dy2DAPKi.jpg.hpp  EnamPic (Edited).Dy2DAPKi.jpg.hpp  Joseph.DDaE1T8U.jpg.hpp  icon.DWwDle4w.png.hpp  logo.jBRcYeJ-.png.hpp  style.DecOkMfa.css.hpp  style.DerPdVYS.css.hpp
include_cpp/: my.h  transaction.h  wallet.h  walletManager.h
myWallet/: CMakeCache.txt  Makefile  cmake_install.cmake
output/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: app.d.ts  app.html
src/lib/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/aboutUs/: +page.svelte
src/routes/allTransactions/: +page.svelte
src/routes/allWallets/: +page.svelte  mine.svelte
src/routes/docs/: +page.svelte
src/routes/license/: +page.svelte
src/routes/recyclebin/: +page.svelte
src/routes/statistics/: +page.svelte
src_cpp/: create_wallet.cpp  delete_permanently.cpp  delete_record.cpp  delete_wallet.cpp  delete_wallet_permanently.cpp  get_records.cpp  get_wallets.cpp  init_db.cpp  record_transaction.cpp  record_transfer.cpp  restore_wallets.cpp  update_record.cpp  update_record_utilities.cpp  update_transfer.cpp  update_wallet.cpp  utils.cpp
